--- a/partystore/src/main/js/package.json
+++ b/partystore/src/main/js/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "@material/tab-bar": "^0.40.1",
+    "@trendmicro/react-sidenav": "^0.4.5",
+    "font-awesome": "^4.7.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
